# UnknownPlanet

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  conf.lua  main.lua
cmake/: base.cmake  debug.cmake  libraries.cmake  library.cmake
include/: Engine.hpp  NonCopyable.hpp  ResourceManager.hpp  StateMachine.hpp  common.h  config.h  log.h  types.h  types.hpp
include/core/: engine.h  render.h  time.h  utils.h  video.h  window.h
include/core/gfx/: opengl.h  render.h
include/core/glfw/: window.h
include/core/sdl/: window.h
include/state/: Base.hpp
libs/: player.lua
libs/system/: button.lua  collision.lua  cursor.lua  debug.lua  inventory.lua  map.lua
src/: Engine.cpp  ResourceManager.cpp  StateMachine.cpp  common.c  log.c  main.c  main.cpp
src/core/: engine.c  render.c  time.c  utils.c  video.c  window.c
src/core/gfx/: opengl.c  render.c
src/core/glfw/: window.c
src/core/sdl/: window.c
